[project]
name = "algebraist"
version = "0.0.1"
description = "Fast Fourier Transform on the Symmetric Group Sn in PyTorch"
authors = [
    { name = "Dashiell Stander", email = "dash.stander@gmail.com" }
]
dependencies = [
    "einops>=0.8.0",
    "numpy>=2.1.1",
    "torch>=2.4.1",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }

[project.scripts]
hello = "algebraist_fft:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.5",
    "pytest>=8.3.3",
    "hypothesis>=6.112.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/algebraist"]
