[project]
name = "algebraist"
version = "0.0.1"
description = "Fast Fourier Transform on the Symmetric Group Sn in PyTorch"
authors = [
    { name = "Dashiell Stander", email = "dash.stander@gmail.com" }
]
dependencies = [
    "einops>=0.8.0",
    "numpy>=2.1.1",
    "tqdm>=4.66.5",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "Apache-2.0" }

[project.optional-dependencies]
torch = [
    "torch>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.5",
    "pytest>=8.3.3",
    "hypothesis>=6.112.1",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.2.5",
    "mypy>=1.11.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/algebraist"]
