[metadata]
name = sn-fft
version = 0.0.1
author = Dashiell Stander
author_email = dash.stander@gmail.com
url = https://github.com/dashstander/sn-fft
description = Fast Fourier Transform on the Symmetric Group Sn in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires = 
    einops
    numpy
    torch

[options.extras_require]
dev =
    pre-commit
    pytest
    pytest-cov
    ruff

[options.packages.find]
exclude =
    docs*
    tests*
